[package]
name = "fil_logger"
description = "A logging library used by Filecoin"
version = "0.1.5"
authors = ["Volker Mische <volker.mische@gmail.com>"]
license = "MIT OR Apache-2.0"
edition = "2018"
repository = "https://github.com/filecoin-project/rust-fil-logger"
readme = "README.md"

[dependencies]
flexi_logger = "0.22.3"
log = "0.4.8"
atty = "0.2.13"
time = "0.3.9"
